# HD3L-High-Speed-Dataloader-for-Distributed-Deep-Learning

./: .gitignore  CMakeLists.txt  README.md
src/client/: BatchDataProcessor.cpp  BatchDataProcessor.h  ThreadPoolSingleton.h  client.cpp  client_data_handler.cpp  client_data_handler.h
src/common/: common_data_handler.h  logging.cpp  logging.h  utils.cpp  utils.h
src/server/: CurrentController.cpp  CurrentController.h  ThreadPoolSingleton.h  flow_control.cpp  flow_control.h  server.cpp  server_data_handler.cpp  server_data_handler.h
